<resources>
    <string name="app_name">Prueba Técnica Blas Piris</string>
    <string name="contentDescriptionImage">userImage</string>
    <string name="add_to_contacts">+ Add to contacts</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="phones">Phones</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="search_user">Search User</string>
    <string name="view_qr">VIEW QR</string>
    <string name="view_image">VIEW IMAGE</string>
</resources>